force-app/main/default/objects/Account/fields/Account_Geolocation_custom__c.field-meta.xml
<CustomField>
    <fullName>Account_Geolocation_custom__c</fullName>
    <description>For importing geolocation tied to account address from external system. Created for when we backfilled address information into Salesforce from Gil. This data may become outdated if the billing address is updated in Salesforce or future addresses changes from the external system are imported without new geolocation information. This field does not tie into the Salesforce built-in geolocation features.</description>
    <label>Account Address Geolocation</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>