force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>