force-app/main/default/objects/Account/fields/Accreditations_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Accreditations_Affiliations__c</fullName>
    <description>Any accreditations or professional affiliations the company holds.</description>
    <inlineHelpText>What accreditations or professional affiliations does the company hold?</inlineHelpText>
    <label>Accreditations/Affiliations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>