force-app/main/default/objects/Account/fields/Active_For_Route_Optimization__c.field-meta.xml
<CustomField>
    <fullName>Active_For_Route_Optimization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active For Route Optimization</label>
    <type>Checkbox</type>
</CustomField>