force-app/main/default/objects/Account/fields/Active_Route_Optimization_date_change__c.field-meta.xml
<CustomField>
    <fullName>Active_Route_Optimization_date_change__c</fullName>
    <description>Sets the date Active for Route Optimization changed.</description>
    <label>Active Route Optimization date change</label>
    <type>DateTime</type>
</CustomField>