force-app/main/default/objects/Account/fields/Additional_Field_Label_10__c.field-meta.xml
<CustomField>
    <fullName>Additional_Field_Label_10__c</fullName>
    <label>Additional Field Label 10</label>
    <length>50</length>
    <type>Text</type>
</CustomField>