force-app/main/default/objects/Account/fields/Aeration__c.field-meta.xml
<CustomField>
    <fullName>Aeration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aeration</label>
    <type>Checkbox</type>
</CustomField>