force-app/main/default/objects/Account/fields/Android_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Android_Last_Login__c</fullName>
    <label>Android Last Login</label>
    <type>DateTime</type>
</CustomField>