force-app/main/default/objects/Account/fields/Branded_Trucks__c.field-meta.xml
<CustomField>
    <fullName>Branded_Trucks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the company run or utilize trucks with the company branding on them?</description>
    <label>Branded Trucks</label>
    <type>Checkbox</type>
</CustomField>