force-app/main/default/objects/Account/fields/Bush_Trimming__c.field-meta.xml
<CustomField>
    <fullName>Bush_Trimming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bush Trimming</label>
    <type>Checkbox</type>
</CustomField>