force-app/main/default/objects/Account/fields/Business_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Business_Address_City__c</fullName>
    <label>Business Address City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>