force-app/main/default/objects/Account/fields/Business_Address_Zip__c.field-meta.xml
<CustomField>
    <fullName>Business_Address_Zip__c</fullName>
    <label>Business Address Zip</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>