force-app/main/default/objects/Account/fields/CBSA__c.field-meta.xml
<CustomField>
    <fullName>CBSA__c</fullName>
    <description>The specific CBSA the contractor is able to accept work in.</description>
    <label>CBSA</label>
    <length>5</length>
    <type>Text</type>
</CustomField>