force-app/main/default/objects/Account/fields/Client_Kickoff_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Kickoff_Call_Date__c</fullName>
    <inlineHelpText>Set the date and time for the Client Kickoff Call.</inlineHelpText>
    <label>Client Kickoff Call Date</label>
    <type>DateTime</type>
</CustomField>