force-app/main/default/objects/Account/fields/Client_Preferred_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Client_Preferred_Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Preferred Contractor</label>
    <type>Checkbox</type>
</CustomField>