force-app/main/default/objects/Account/fields/Client_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Property_Type__c</fullName>
    <label>Client Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFR</fullName>
            </value>
            <value>
                <fullName>Small Commercial</fullName>
            </value>
            <value>
                <fullName>City/HOA</fullName>
            </value>
            <value>
                <fullName>Multi-Family</fullName>
            </value>
            <value>
                <fullName>New Construction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>REO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>