force-app/main/default/objects/Account/fields/Company_Uniform__c.field-meta.xml
<CustomField>
    <fullName>Company_Uniform__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the contractor require their employees to adhere to a dress code or company branded uniform?</description>
    <label>Company Uniform</label>
    <type>Checkbox</type>
</CustomField>