force-app/main/default/objects/Account/fields/Contractor_Agreement_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Agreement_Submission_Date__c</fullName>
    <label>Contractor Agreement Submission Date</label>
    <type>Date</type>
</CustomField>