force-app/main/default/objects/Account/fields/Contractor_Agreement_Version__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Agreement_Version__c</fullName>
    <label>Contractor Agreement Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>