force-app/main/default/objects/Account/fields/Contractor_Id__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Id__c</fullName>
    <externalId>true</externalId>
    <label>Contractor Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>