force-app/main/default/objects/Account/fields/Contractor_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Onboarding_Status__c</fullName>
    <label>Contractor Nesting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding 1</fullName>
            </value>
            <value>
                <fullName>Onboarding 2</fullName>
            </value>
            <value>
                <fullName>Onboarding 3</fullName>
            </value>
            <value>
                <fullName>Onboarding 4</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>