force-app/main/default/objects/Account/fields/Contractor_Status__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Status__c</fullName>
    <label>Contractor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Deactivated User</fullName>
            </value>
            <value>
                <fullName>Inactive - Poor Quality</fullName>
            </value>
            <value>
                <fullName>Inactive - No Communication</fullName>
            </value>
            <value>
                <fullName>Inactive - No Longer in Business</fullName>
            </value>
            <value>
                <fullName>Inactive - Incomplete W9</fullName>
            </value>
            <value>
                <fullName>Inactive - No Longer Wants to Work With TaskEasy</fullName>
            </value>
            <value>
                <fullName>Inactive - Personal Emergency</fullName>
            </value>
            <value>
                <fullName>Inactive - T&amp;C&apos;s Not Signed</fullName>
            </value>
            <value>
                <fullName>Inactive - Never Completed a Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>