force-app/main/default/objects/Account/fields/CreatedDate_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate_Date_Only__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <label>Created Date (Date Only)</label>
    <type>Date</type>
</CustomField>