force-app/main/default/objects/Account/fields/Dashboard_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Last_Login__c</fullName>
    <label>Dashboard Last Login</label>
    <type>DateTime</type>
</CustomField>