force-app/main/default/objects/Account/fields/Days_available__c.field-meta.xml
<CustomField>
    <fullName>Days_available__c</fullName>
    <label>Days available</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Days_of_the_week</valueSetName>
    </valueSet>
</CustomField>