force-app/main/default/objects/Account/fields/Debris_Trash_Removal__c.field-meta.xml
<CustomField>
    <fullName>Debris_Trash_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debris &amp; Trash Removal</label>
    <type>Checkbox</type>
</CustomField>