force-app/main/default/objects/Account/fields/Debt_Status__c.field-meta.xml
<CustomField>
    <fullName>Debt_Status__c</fullName>
    <label>Debt Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Resolved - Paid in full</fullName>
            </value>
            <value>
                <fullName>Resolved - Settled</fullName>
            </value>
            <value>
                <fullName>Resolved - Wrote off as bad debt</fullName>
            </value>
            <value>
                <fullName>Waiting on demand letter response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>