force-app/main/default/objects/Account/fields/Desertscaping__c.field-meta.xml
<CustomField>
    <fullName>Desertscaping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desertscaping</label>
    <type>Checkbox</type>
</CustomField>