force-app/main/default/objects/Account/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>The email domain to be used for clients needing domain-based routing.  This should only be filled in for clients on Client Teams 1-3.</description>
    <inlineHelpText>Email domain for domain-based routing to Client Teams 1-3.  Do not fill in if the client ops is not managed by one of those three teams.</inlineHelpText>
    <label>Email Domain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>