force-app/main/default/objects/Account/fields/Edger__c.field-meta.xml
<CustomField>
    <fullName>Edger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edger</label>
    <type>Checkbox</type>
</CustomField>