force-app/main/default/objects/Account/fields/Email_Routing_Managed__c.field-meta.xml
<CustomField>
    <fullName>Email_Routing_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is checked, please fill in the domain field for case routing purposes. This box should only be filled in by the Account Manager before new client kickoff when the ops team has been established.</description>
    <inlineHelpText>Does this client require special domain based routing?  If in doubt, leave unchecked and do not input the client domain.</inlineHelpText>
    <label>Email Routing Managed</label>
    <type>Checkbox</type>
</CustomField>