force-app/main/default/objects/Account/fields/Fall_Cleanup__c.field-meta.xml
<CustomField>
    <fullName>Fall_Cleanup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fall Cleanup</label>
    <type>Checkbox</type>
</CustomField>