force-app/main/default/objects/Account/fields/Fertilization__c.field-meta.xml
<CustomField>
    <fullName>Fertilization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fertilization</label>
    <type>Checkbox</type>
</CustomField>