force-app/main/default/objects/Account/fields/Fertilization_Application_License__c.field-meta.xml
<CustomField>
    <fullName>Fertilization_Application_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fertilization Application License</label>
    <type>Checkbox</type>
</CustomField>