force-app/main/default/objects/Account/fields/Finance_contact_address__c.field-meta.xml
<CustomField>
    <fullName>Finance_contact_address__c</fullName>
    <label>Finance contact address</label>
    <type>TextArea</type>
</CustomField>