force-app/main/default/objects/Account/fields/Finance_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contacts__c</fullName>
    <label>Finance Contacts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>