force-app/main/default/objects/Account/fields/Finance_Note__c.field-meta.xml
<CustomField>
    <fullName>Finance_Note__c</fullName>
    <label>Finance Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>