force-app/main/default/objects/Account/fields/First_Job_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Job_Completion_Date__c</fullName>
    <label>First Job Completion Date</label>
    <type>DateTime</type>
</CustomField>