force-app/main/default/objects/Account/fields/First_Job_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Job_Scheduled_Date__c</fullName>
    <label>First Job Scheduled Date</label>
    <type>Date</type>
</CustomField>