force-app/main/default/objects/Account/fields/Fully_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Fully_Verified_Date__c</fullName>
    <label>Fully Verified Date</label>
    <type>Date</type>
</CustomField>