force-app/main/default/objects/Account/fields/Handheld_or_Backpack_Leaf_Blower_s__c.field-meta.xml
<CustomField>
    <fullName>Handheld_or_Backpack_Leaf_Blower_s__c</fullName>
    <label>Handheld or Backpack Leaf Blower(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>