force-app/main/default/objects/Account/fields/Has_Accepted_Contractor_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Has_Accepted_Contractor_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has accepted the TaskEasy contractor agreement.</description>
    <label>Has Accepted Contractor Agreement</label>
    <type>Checkbox</type>
</CustomField>