force-app/main/default/objects/Account/fields/Incomplete_Job_Notification_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Job_Notification_Scheduled__c</fullName>
    <formula>Last_Incomplete_Job__c = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incomplete Job Notification Scheduled</label>
    <type>Checkbox</type>
</CustomField>