force-app/main/default/objects/Account/fields/Internal_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Internal_Ownership__c</fullName>
    <label>Internal Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Account</fullName>
            </value>
            <value>
                <fullName>House Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>