force-app/main/default/objects/Account/fields/IOS_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>IOS_Last_Login__c</fullName>
    <label>iOS Last Login</label>
    <type>DateTime</type>
</CustomField>