force-app/main/default/objects/Account/fields/Is_Team_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Team_Account__c</fullName>
    <description>Is a Contractor Team Account (child account of a contractor account)</description>
    <formula>NOT(ISBLANK(ParentId)) &amp;&amp;
RecordType.Name = &quot;Contractor&quot;</formula>
    <label>Is Team Account</label>
    <type>Checkbox</type>
</CustomField>