force-app/main/default/objects/Account/fields/Is_this_a_registered_company__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_registered_company__c</fullName>
    <label>Is this a registered company?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>