force-app/main/default/objects/Account/fields/Job_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Job_Minimum__c</fullName>
    <label>Job Minimum</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>