force-app/main/default/objects/Account/fields/Landscape_Contractor_C_27_License__c.field-meta.xml
<CustomField>
    <fullName>Landscape_Contractor_C_27_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landscape Contractor C-27 License</label>
    <type>Checkbox</type>
</CustomField>