force-app/main/default/objects/Account/fields/Last_Incomplete_Job__c.field-meta.xml
<CustomField>
    <fullName>Last_Incomplete_Job__c</fullName>
    <label>Last Incomplete Job</label>
    <summarizedField>Incomplete_Job__c.Scheduled_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Incomplete_Job__c.Notification_Sent_Date__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Incomplete_Job__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>