force-app/main/default/objects/Account/fields/Lawn_Mowing__c.field-meta.xml
<CustomField>
    <fullName>Lawn_Mowing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lawn Mowing</label>
    <type>Checkbox</type>
</CustomField>