force-app/main/default/objects/Account/fields/Leaf_Cleanup__c.field-meta.xml
<CustomField>
    <fullName>Leaf_Cleanup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leaf Cleanup</label>
    <type>Checkbox</type>
</CustomField>