force-app/main/default/objects/Account/fields/Logo_Type__c.field-meta.xml
<CustomField>
    <fullName>Logo_Type__c</fullName>
    <label>Logo Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Transition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>